| Bug #28476 | force index on a disabled myisam index gives error 124 | ||
|---|---|---|---|
| Submitted: | 16 May 2007 18:47 | Modified: | 7 Jun 2007 18:28 |
| Reporter: | Shane Bester | ||
| Status: | Closed | ||
| Category: | Server: MyISAM | Severity: | S3 (Non-critical) |
| Version: | 5.0.42 | OS: | Any |
| Assigned to: | Georgi Kodinov | Target Version: | |
[16 May 2007 18:47]
Shane Bester
[17 May 2007 11:14]
Timour Katchaounov
Changed to P2 as this is wrong error instead of returning a query result.
[17 May 2007 15:14]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/26904 ChangeSet@1.2491, 2007-05-17 16:14:16+03:00, gkodinov@magare.gmz +4 -0 Bug #28476: When processing the USE/FORCE index hints the optimizer was not checking if the indexes specified are enabled (see ALTER TABLE). Fixed by: - Ignoring disabled indexes in USE/FORCE index - issue warning if some of the USE/FORCE indexes is ignored.
[22 May 2007 14:11]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/27118 ChangeSet@1.2491, 2007-05-22 13:28:02+03:00, gkodinov@magare.gmz +7 -0 Bug #28476: When processing the USE/FORCE index hints the optimizer was not checking if the indexes specified are enabled (see ALTER TABLE). Fixed by: Backporting the fix for bug 20604 to 5.0
[4 Jun 2007 23:21]
Bugs System
Pushed into 5.1.20-beta
[4 Jun 2007 23:23]
Bugs System
Pushed into 5.0.44
[7 Jun 2007 18:28]
MC Brown
A note has been added to the 5.0.44 and 5.1.20 changelogs.
